welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:7: error: 'while' expected but identifier found.
      avance()
      ^SlugHunting:9: error: '(' expected but '}' found.
    } while( ! estSurBiscuit())
    ^SlugHunting:9: error: ';' expected but 'while' found.
    } while( ! estSurBiscuit())
      ^SlugHunting:13: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:25: error: Unmatched closing brace '}' ignored here
}
^